🚀 Reading repos to walk from JSON file